--- a/UI/public/index.html
+++ b/UI/public/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
+        <link rel="shortcut icon" href="favicon.ico">
         <!--
           <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
           Notice the use of %PUBLIC_URL% in the tag above.
@@ -27,9 +28,7 @@
         <!-- Latest compiled JavaScript -->
         <!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>-->
 
-
-
-        <title>React App</title>
+        <title>Clision</title>
     </head>
     <body>
     <div id="root"></div>
